# camera

./: .gitignore  CMakeLists.txt  Makefile  README.md  USERGUIDE.md  cmake_install.cmake  connect.sh  get_pic.exp  jpeg.py  main.c  run_demo.sh  test.c  test.py
camextra/: main.c
ccam/: Makefile  main.c  ucam  ucam.c  ucam.h
include/: camera.h  mock.h  ucam.h
pycam/: jpeg.py
src/: ccam.cpp  main.c  main.cpp  ucam.c  ucam.cpp
